# serializer version: 1
# name: TestEdgeCaseSnapshots.test_rotate_near_zero
  list([
    dict({
      'bbox': list([
        26,
        227,
        268,
        237,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        26,
        251,
        472,
        262,
      ]),
      'column': 0,
      'paragraph_index': 1,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        26,
        275,
        479,
        286,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestEdgeCaseSnapshots.test_small_image_rotate
  list([
    dict({
      'bbox': list([
        10,
        10,
        90,
        90,
      ]),
    }),
  ])
# ---
# name: TestPerspectiveSnapshots.test_perspective_book_curve
  list([
    dict({
      'bbox': list([
        39,
        229,
        268,
        239,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        39,
        252,
        461,
        262,
      ]),
      'column': 0,
      'paragraph_index': 1,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        39,
        274,
        467,
        285,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestPerspectiveSnapshots.test_perspective_camera_angle_left
  list([
    dict({
      'bbox': list([
        49,
        242,
        267,
        252,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        50,
        265,
        450,
        276,
      ]),
      'column': 0,
      'paragraph_index': 1,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        51,
        288,
        455,
        298,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestPerspectiveSnapshots.test_perspective_camera_angle_top
  list([
    dict({
      'bbox': list([
        62,
        205,
        267,
        214,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        60,
        227,
        441,
        237,
      ]),
      'column': 0,
      'paragraph_index': 1,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        58,
        249,
        448,
        260,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestPerspectiveSnapshots.test_perspective_combined
  list([
    dict({
      'bbox': list([
        44,
        224,
        268,
        233,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        44,
        246,
        456,
        257,
      ]),
      'column': 0,
      'paragraph_index': 1,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        43,
        269,
        463,
        279,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestPerspectiveSnapshots.test_perspective_multicolumn
  list([
    dict({
      'bbox': list([
        43,
        14,
        285,
        46,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'Column layouts are common in documents like newspapers and academic papers. Each column should be handled properly.',
    }),
    dict({
      'bbox': list([
        43,
        59,
        284,
        79,
      ]),
      'column': 0,
      'paragraph_index': 1,
      'paragraph_text': 'The transformation must preserve the relative positions of text across all columns.',
    }),
  ])
# ---
# name: TestRotateSnapshots.test_rotate_multicolumn
  list([
    dict({
      'bbox': list([
        43,
        21,
        274,
        68,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'Column layouts are common in documents like newspapers and academic papers. Each column should be handled properly.',
    }),
    dict({
      'bbox': list([
        46,
        64,
        276,
        100,
      ]),
      'column': 0,
      'paragraph_index': 1,
      'paragraph_text': 'The transformation must preserve the relative positions of text across all columns.',
    }),
  ])
# ---
# name: TestRotateSnapshots.test_rotate_small_angle_negative
  list([
    dict({
      'bbox': list([
        37,
        218,
        269,
        238,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        36,
        240,
        462,
        272,
      ]),
      'column': 0,
      'paragraph_index': 1,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        35,
        263,
        468,
        295,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
# name: TestRotateSnapshots.test_rotate_small_angle_positive
  list([
    dict({
      'bbox': list([
        37,
        228,
        266,
        251,
      ]),
      'column': 0,
      'paragraph_index': 0,
      'paragraph_text': 'This is a sample document with multiple paragraphs.',
    }),
    dict({
      'bbox': list([
        39,
        239,
        460,
        275,
      ]),
      'column': 0,
      'paragraph_index': 1,
      'paragraph_text': 'Each paragraph will have its own bounding box that needs to be tracked through transformations.',
    }),
    dict({
      'bbox': list([
        40,
        261,
        468,
        298,
      ]),
      'column': 0,
      'paragraph_index': 2,
      'paragraph_text': 'This ensures that the OCR model can learn proper text localization even after geometric distortions.',
    }),
  ])
# ---
